--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "access": "public"
     },
     "engines": {
-        "npm": ">=12.0.0"
+        "node": ">=12.0.0"
     },
     "scripts": {
         "lint": "eslint . --fix --config=./.eslintrc.js --ext .js,.md,.json"
