--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-    "name": "@hexonet/semantic-release-github-whmcs-config",
-    "version": "1.4.1",
-    "description": "semantic-release shareable configuration for GitHub + WHMCS Marketplace",
-    "main": ".sharedreleaserc.js",
-    "private": false,
-    "publishConfig": {
-        "access": "public"
-    },
-    "engines": {
-        "node": ">=12.0.0"
-    },
-    "scripts": {
-        "lint": "eslint . --fix --config=./.eslintrc.js --ext .js,.md,.json"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/hexonet/semantic-release-github-whmcs-config.git"
-    },
-    "keywords": [
-        "semantic-release",
-        "semantic-release-config",
-        "github",
-        "git",
-        "release",
-        "changelog",
-        "whmcs"
-    ],
-    "author": "Kai Schwarz <kschwarz@hexonet.net>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/hexonet/semantic-release-github-whmcs-config/issues"
-    },
-    "homepage": "https://github.com/hexonet/semantic-release-github-whmcs-config#readme",
-    "dependencies": {
-        "@hexonet/semantic-release-github-whmcsbase-config": "^3.0.1",
-        "@hexonet/semantic-release-whmcs": "^2.0.2"
-    },
-    "peerDependencies": {
-        "semantic-release": "^17.2.1"
-    },
-    "devDependencies": {
-        "@hexonet/semantic-release-github-npm-config": "^2.0.3",
-        "@octokit/core": "^3.2.0",
-        "eslint": "^7.12.1",
-        "eslint-config-standard": "^16.0.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-json": "^2.1.2",
-        "eslint-plugin-markdown": "^1.0.2",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.2.1",
-        "semantic-release": "^17.2.1"
-    }
+  "name": "@hexonet/semantic-release-github-whmcs-config",
+  "version": "1.4.1",
+  "description": "semantic-release shareable configuration for GitHub + WHMCS Marketplace",
+  "main": ".sharedreleaserc.js",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=14.17.0",
+    "npm": ">=6.14.13"
+  },
+  "scripts": {
+    "lint": "eslint . --fix --config=./.eslintrc.js --ext .js,.md,.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hexonet/semantic-release-github-whmcs-config.git"
+  },
+  "keywords": [
+    "semantic-release",
+    "semantic-release-config",
+    "github",
+    "git",
+    "release",
+    "changelog",
+    "whmcs"
+  ],
+  "author": "Kai Schwarz <kschwarz@hexonet.net>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hexonet/semantic-release-github-whmcs-config/issues"
+  },
+  "homepage": "https://github.com/hexonet/semantic-release-github-whmcs-config#readme",
+  "dependencies": {
+    "@hexonet/semantic-release-github-whmcsbase-config": "^3.1.3",
+    "@hexonet/semantic-release-whmcs": "^3.1.1"
+  },
+  "peerDependencies": {
+    "semantic-release": "^18.0.1"
+  },
+  "devDependencies": {
+    "@hexonet/semantic-release-github-npm-config": "^2.0.4",
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "semantic-release": "^18.0.1"
+  }
 }
