chore(keywords): updated
BREAKING CHANGE: upgraded to semantic-release v18

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "git",
     "release",
     "changelog",
-    "whmcs"
+    "whmcs",
+    "marketplace"
   ],
   "author": "Kai Schwarz <kschwarz@hexonet.net>",
   "license": "MIT",
